<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="10dp"
        android:orientation="vertical" >

        <TextView
            android:id="@+id/guildWarTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAlignment="center"
            android:layout_marginBottom="20dp"
            android:textSize="26sp"
            android:textColor="@color/colorAccent"
            android:textStyle="bold"
            android:paddingTop="10dp"
            android:text="@string/guildWar"/>

        <TextView
            android:id="@+id/playerPowerLabel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="16sp"
            android:textColor="@color/white"
            android:textStyle="bold|italic"
            android:text="@string/guildWarText1"/>

        <EditText
            android:id="@+id/playerPower"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/white"
            android:textColorHint="@color/white"
            android:textSize="14sp"
            android:inputType="number"
            android:maxLength="7"
            android:hint="@string/guildWarText2"/>

        <TextView
            android:id="@+id/playerScoreLabel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="16sp"
            android:layout_marginTop="10dp"
            android:textColor="@color/white"
            android:textStyle="bold|italic"
            android:text="@string/guildWarText3"/>

        <EditText
            android:id="@+id/playerScore"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/white"
            android:textColorHint="@color/white"
            android:textSize="14sp"
            android:inputType="number"
            android:maxLength="5"
            android:hint="@string/guildWarText4"/>

        <TextView
            android:id="@+id/resultLabel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="10dp"
            android:textSize="16sp"
            android:layout_marginTop="10dp"
            android:textColor="@color/orange"/>
    </LinearLayout>
</ScrollView>