<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="10dp"
        android:orientation="vertical" >

        <TextView
            android:id="@+id/accuracyTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAlignment="center"
            android:layout_marginBottom="20dp"
            android:textSize="26sp"
            android:textColor="@color/colorAccent"
            android:textStyle="bold"
            android:paddingTop="10dp"
            android:text="@string/accuracy"/>

        <TextView
            android:id="@+id/accuracyLabel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="16sp"
            android:textColor="@color/white"
            android:textStyle="bold|italic"
            android:text="@string/accuracyText1"/>

        <EditText
            android:id="@+id/accuracyField"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColorHint="@color/white"
            android:textSize="14sp"
            android:inputType="number"
            android:maxLength="4"
            android:layout_marginBottom="20dp"
            android:hint="@string/accuracyText2"/>

        <TextView
            android:id="@+id/accuracyEquipLabel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="16sp"
            android:textColor="@color/white"
            android:textStyle="bold|italic"
            android:text="@string/accuracyText3"/>

        <EditText
            android:id="@+id/accuracyEquipField"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColorHint="@color/white"
            android:textSize="14sp"
            android:inputType="number"
            android:maxLength="4"
            android:layout_marginBottom="20dp"
            android:hint="@string/accuracyText4"/>

        <TextView
            android:id="@+id/artefactLabel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="16sp"
            android:textColor="@color/white"
            android:textStyle="bold|italic"
            android:text="@string/accuracyText5"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/artefactPicture"
                android:layout_width="50dp"
                android:layout_height="50dp" />

            <Switch
                android:id="@+id/artefactSwitch"
                android:layout_width="wrap_content"
                android:layout_height="50dp" />
        </LinearLayout>

        <Button
            android:id="@+id/accuracyButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:layout_marginEnd="5dp"
            android:background="@color/secondaryLightColor"
            android:layout_marginTop="10dp"
            android:text="@string/analyze"/>

    </LinearLayout>
</ScrollView>