<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="10dp"
        android:orientation="vertical" >

        <TextView
            android:id="@+id/aetherockTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAlignment="center"
            android:layout_marginBottom="20dp"
            android:textSize="26sp"
            android:textColor="@color/colorAccent"
            android:textStyle="bold"
            android:paddingTop="10dp"
            android:text="@string/aetherock"/>

        <TextView
            android:id="@+id/currentlvlLabel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="16sp"
            android:textColor="@color/white"
            android:textStyle="bold|italic"
            android:text="@string/spinnerText1"/>

        <NumberPicker
            android:id="@+id/currentLvl"
            android:layout_width="200dp"
            android:layout_height="160dp"
            android:layout_gravity="center"
            android:theme="@style/AppTheme.Picker"/>

        <TextView
            android:id="@+id/aimLvlLabel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="16sp"
            android:textColor="@color/white"
            android:textStyle="bold|italic"
            android:text="@string/spinnerText2"/>

        <NumberPicker
            android:id="@+id/aimLvl"
            android:layout_width="200dp"
            android:layout_height="160dp"
            android:layout_gravity="center"
            android:theme="@style/AppTheme.Picker"/>

        <Button
            android:id="@+id/aetherockButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:layout_marginEnd="5dp"
            android:background="@color/secondaryLightColor"
            android:layout_marginTop="10dp"
            android:text="@string/analyze"/>
    </LinearLayout>
</ScrollView>