<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="10dp"
        android:orientation="vertical">

        <TextView
            android:id="@+id/crystalTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAlignment="center"
            android:layout_marginBottom="20dp"
            android:textSize="26sp"
            android:textColor="@color/colorAccent"
            android:textStyle="bold"
            android:paddingTop="10dp"
            android:text="@string/crystal"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_marginEnd="10dp"
                android:background="@drawable/rectangle_corners"
                android:padding="5dp"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="16sp"
                    android:textColor="@color/white"
                    android:textStyle="bold|italic"
                    android:text="@string/spinnerText1"/>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <Space
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"/>

                    <NumberPicker
                        android:id="@+id/currentLvl"
                        android:layout_width="0dp"
                        android:layout_height="180dp"
                        android:layout_weight="2"
                        android:layout_gravity="center"
                        android:theme="@style/AppTheme.Picker"/>

                    <Space
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"/>
                </LinearLayout>
            </LinearLayout>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@drawable/rectangle_corners"
                android:padding="5dp"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="16sp"
                    android:textColor="@color/white"
                    android:textStyle="bold|italic"
                    android:text="@string/spinnerText2"/>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <Space
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"/>

                    <NumberPicker
                        android:id="@+id/aimLvl"
                        android:layout_width="0dp"
                        android:layout_height="180dp"
                        android:layout_weight="2"
                        android:layout_gravity="center"
                        android:theme="@style/AppTheme.Picker"/>

                    <Space
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"/>
                </LinearLayout>
            </LinearLayout>
        </LinearLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/destinyText"
            android:textColor="@color/white"
            android:textSize="16sp"
            android:textStyle="bold|italic" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="60dp"
            android:layout_marginEnd="60dp"
            android:layout_marginTop="5dp"
            android:background="@drawable/rectangle_corners"
            android:orientation="vertical"
            android:padding="10dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <ImageView
                    android:layout_width="@dimen/destiny_pic_size"
                    android:layout_height="@dimen/destiny_pic_size"
                    android:layout_marginEnd="@dimen/destiny_pic_size"
                    android:src="@drawable/crystals"/>

                <TextView
                    android:id="@+id/crystalAmount"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="@color/white"
                    android:text="@string/zero" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <ImageView
                    android:layout_width="@dimen/destiny_pic_size"
                    android:layout_height="@dimen/destiny_pic_size"
                    android:layout_marginEnd="@dimen/destiny_pic_size"
                    android:src="@drawable/mana_little"/>

                <TextView
                    android:id="@+id/manaAmount"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="@color/white"
                    android:text="@string/zero" />
            </LinearLayout>
        </LinearLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/protectorText"
            android:textColor="@color/white"
            android:textSize="16sp"
            android:textStyle="bold|italic" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="60dp"
            android:layout_marginEnd="60dp"
            android:layout_marginTop="5dp"
            android:background="@drawable/rectangle_corners"
            android:orientation="vertical"
            android:padding="10dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <ImageView
                    android:layout_width="@dimen/destiny_pic_size"
                    android:layout_height="@dimen/destiny_pic_size"
                    android:layout_marginEnd="@dimen/destiny_pic_size"
                    android:src="@drawable/ico_attack"/>

                <TextView
                    android:id="@+id/attackAmount"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="@color/white"
                    android:text="@string/zero" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <ImageView
                    android:layout_width="@dimen/destiny_pic_size"
                    android:layout_height="@dimen/destiny_pic_size"
                    android:layout_marginEnd="@dimen/destiny_pic_size"
                    android:src="@drawable/ico_hp"/>

                <TextView
                    android:id="@+id/hpAmount"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="@color/white"
                    android:text="@string/zero" />
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>
</ScrollView>